--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body class="">
     <header class="lg:px-32 sm:px-5 my-5">
-        <div class="navbar bg-base-100">
+        <div class="navbar bg-base-100 ">
             <div class="navbar-start">
                 <a class="btn btn-ghost text-3xl"> <i
                         class=" bg-lime-300 rounded-full p-1 fa-solid fa-arrow-right -rotate-45"></i> Rinterio</a>
@@ -61,7 +61,7 @@
             </div>
             <div class="navbar-end">
 
-                <div class="md:block hidden space-x-4">
+                <div class="md:block hidden space-x-5">
 
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -198,7 +198,6 @@
                         <i class="fa-solid fa-arrow-right"></i>Explore our Latest works
                     </button>
 
-
                     <h1 class="text-3xl font-bold">Our Latest Portfolio</h1>
                 </div>
                 <div class="flex-col items-center text-center">
@@ -216,8 +215,7 @@
                             <p class="text-gray-500">The barn house captivates with its blend of rustic charm
                                 and modern. The barn house captivates with its blend of
                                 rustic charm and modern .</p>
-                            <button
-                                class="text-black text-xl font-bold">View
+                            <button class="text-black text-xl font-bold">View
                                 Details
                                 <i
                                     class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45"></i>
@@ -228,12 +226,66 @@
                 </div>
             </div>
         </section>
-        <section class=""></section>
+        <section class="">
+            <div>
+                <div class="space-y-5">
+                    <div class="flex-col items-center text-center">
+
+                        <button class="btn border-none bg-slate-100 rounded-3xl ">
+                            <i class="fa-solid fa-arrow-right"></i>Let s Connect
+                        </button>
+
+                        <h1 class="text-3xl font-bold">Let s Discuss Next Project</h1>
+                    </div>
+                    <div class="flex-col items-center text-center">
+                        <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern
+                            sophistication,<br>
+                            featuring weathered wood, sleek metal accents.
+                        </p>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
-<footer>
 
+<footer class="bg-black py-20 px-5">
+    <div class="space-y-8">
+        <div class="flex-col items-center text-center">
+            <a class="btn btn-ghost text-3xl text-white">
+                Rinterio<i class=" bg-lime-300 rounded-full p-1 fa-solid fa-arrow-right -rotate-45 text-black"></i>
+            </a>
+        </div>
+
+        <div class="flex-col items-center text-center">
+            <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern
+                sophistication,<br>
+                featuring weathered wood, sleek metal accents.
+            </p>
+        </div>
+
+
+        <div class="flex flex-col lg:flex-row lg:justify-center items-center text-center">
+            <ul class="lg:flex lg:space-x-6 space-y-4 lg:space-y-0 px-1 text-gray-400">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+
+
+
+        <div class="flex-col items-center text-center">
+            <a class="btn bg-lime-300 rounded-3xl text-black text-xl">Book Consult
+                <i class="bg-black rounded-full text-white p-1 fa-solid fa-arrow-right -rotate-45"></i>
+            </a>
+        </div>
+    </div>
 </footer>
 
 </html>
