--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 
 <body class="">
+
     <header class="lg:px-32 sm:px-5 my-5">
         <div class="navbar bg-base-100 ">
             <div class="navbar-start">
@@ -97,6 +98,7 @@
     </header>
 
     <main class="">
+
         <section class="bg-slate-100 gap-5 py-10
          px-5 lg:px-32 lg:grid grid-cols-2">
             <div class="space-y-5 ">
@@ -190,6 +192,7 @@
                 </div>
             </div>
         </section>
+
         <section class="px-5 lg:px-32 my-5 py-20">
             <div class="space-y-5">
                 <div class="flex-col items-center text-center">
@@ -207,27 +210,86 @@
                     </p>
                 </div>
 
-                <div class="">
-                    <div class="grid grid-cols-2">
-                        <div class="space-y-4">
+
+                <div class="grid grid-cols-2 gap-5">
+                    <div class="">
+                        <div>
                             <img src="assets/img1.png" alt="">
+                        </div>
+                        <div>
                             <h3 class="text-xl font-bold">Commercial</h3>
                             <p class="text-gray-500">The barn house captivates with its blend of rustic charm
                                 and modern. The barn house captivates with its blend of
                                 rustic charm and modern .</p>
                             <button class="text-black text-xl font-bold">View
                                 Details
-                                <i
-                                    class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45"></i>
+                                <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45">
+                                </i>
                             </button>
-
                         </div>
                     </div>
+                    <div>
+                        <img src="assets/img2.png" alt="">
+                    </div>
                 </div>
+
+
+
+
+                <div class="grid lg:grid-cols-2 sm:grid-rows-2 gap-5">
+                    <div class="flex flex-col">
+                        <div>
+                            <img src="assets/img1.png" alt="">
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-bold">Commercial</h3>
+                            <p class="text-gray-500">The barn house captivates with its blend of rustic charm
+                                and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                            <button class="text-black text-xl font-bold">View Details
+                                <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="assets/img2.png" alt="">
+                    </div>
+                </div>
+                
+
+
+
+
+
+                <div class="grid grid-cols-3">
+                    <div>
+                        <img src="assets/img3.png" alt="">
+                    </div>
+                    <div>
+                        <div>
+                            <img src="assets/img4.png" alt="">
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-bold">Commercial</h3>
+                            <p class="text-gray-500">The barn house captivates with 
+                                its blend of rustic charm and 
+                                modern.</p>
+                            <button class="text-black text-xl font-bold">View
+                                Details
+                                <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45">
+                                </i>
+                            </button>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="assets/img5.png" alt="">
+                    </div>
+                </div>
+
             </div>
         </section>
-        <section class="">
-            <div>
+
+        <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center max-h-full">
+            <div class="lg:px-60 sm:px-5 py-14">
                 <div class="space-y-5">
                     <div class="flex-col items-center text-center">
 
@@ -238,19 +300,50 @@
                         <h1 class="text-3xl font-bold">Let s Discuss Next Project</h1>
                     </div>
                     <div class="flex-col items-center text-center">
-                        <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern
-                            sophistication,<br>
-                            featuring weathered wood, sleek metal accents.
+                        <p class="text-gray-700">The barn house captivates with its blend of rustic <br> charm and
+                            modern
+                            sophistication,
+                            featuring<br> weathered wood, sleek metal accents.
                         </p>
                     </div>
 
+                    <div>
+                        <div>
+                            <form class="max-w-4xl mx-auto space-y-6">
 
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                    <input type="text" placeholder="First Name*"
+                                        class="p-4 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
+                                    <input type="text" placeholder="Last Name*"
+                                        class="p-4 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
+                                </div>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                    <input type="text" placeholder="Phone Number*"
+                                        class="p-4 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
+                                    <input type="text" placeholder="Email Number*"
+                                        class="p-4 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
+                                </div>
+                                <div>
+                                    <textarea rows="6" placeholder="Write your message here"
+                                        class="w-full p-4 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500"></textarea>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="flex flex-col items-center text-center ">
+                            <a class="btn bg-lime-300 rounded-3xl text-black text-xl w-full block pt-2">Send Mail
+                                <i class="bg-black rounded-full text-white p-1 fa-solid fa-arrow-right -rotate-45"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
     </main>
 
 </body>
+
 
 <footer class="bg-black py-20 px-5">
     <div class="space-y-8">
@@ -267,7 +360,6 @@
             </p>
         </div>
 
-
         <div class="flex flex-col lg:flex-row lg:justify-center items-center text-center">
             <ul class="lg:flex lg:space-x-6 space-y-4 lg:space-y-0 px-1 text-gray-400">
                 <li><a href="#">Home</a></li>
@@ -277,8 +369,6 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
-
-
 
         <div class="flex-col items-center text-center">
             <a class="btn bg-lime-300 rounded-3xl text-black text-xl">Book Consult
