--- a/index.html
+++ b/index.html
@@ -193,99 +193,62 @@
             </div>
         </section>
 
-        <section class="px-5 lg:px-32 my-5 py-20">
-            <div class="space-y-5">
-                <div class="flex-col items-center text-center">
+        <section>
 
-                    <button class="btn border-none bg-slate-100 rounded-3xl ">
-                        <i class="fa-solid fa-arrow-right"></i>Explore our Latest works
-                    </button>
+            <div class="w-full px-20 lg:px-32 my-5 py-20">
+                <div class="lg:grid grid-cols-3 mb-4 gap-4">
 
-                    <h1 class="text-3xl font-bold">Our Latest Portfolio</h1>
-                </div>
-                <div class="flex-col items-center text-center">
-                    <p class="text-gray-700">The barn house captivates with its blend of rustic charm and modern
-                        sophistication,<br>
-                        featuring weathered wood, sleek metal accents.
-                    </p>
-                </div>
-
-
-                <div class="grid grid-cols-2 gap-5">
-                    <div class="">
+                    <div class="col-span-2 lg:flex gap-4 px-5 my-5">
                         <div>
-                            <img src="assets/img1.png" alt="">
+                            <img class="w-full h-auto object-cover" src="assets/img1.png" alt="">
                         </div>
-                        <div>
-                            <h3 class="text-xl font-bold">Commercial</h3>
-                            <p class="text-gray-500">The barn house captivates with its blend of rustic charm
-                                and modern. The barn house captivates with its blend of
-                                rustic charm and modern .</p>
-                            <button class="text-black text-xl font-bold">View
-                                Details
-                                <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45">
-                                </i>
-                            </button>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="assets/img2.png" alt="">
-                    </div>
-                </div>
-
-
-
-
-                <div class="grid lg:grid-cols-2 sm:grid-rows-2 gap-5">
-                    <div class="flex flex-col">
-                        <div>
-                            <img src="assets/img1.png" alt="">
-                        </div>
-                        <div>
+                        <div class="lg:w-96 sm:w-72 space-y-5">
                             <h3 class="text-xl font-bold">Commercial</h3>
                             <p class="text-gray-500">The barn house captivates with its blend of rustic charm
                                 and modern. The barn house captivates with its blend of rustic charm and modern.</p>
                             <button class="text-black text-xl font-bold">View Details
-                                <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="assets/img2.png" alt="">
-                    </div>
-                </div>
-                
-
-
-
-
-
-                <div class="grid grid-cols-3">
-                    <div>
-                        <img src="assets/img3.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <img src="assets/img4.png" alt="">
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-bold">Commercial</h3>
-                            <p class="text-gray-500">The barn house captivates with 
-                                its blend of rustic charm and 
-                                modern.</p>
-                            <button class="text-black text-xl font-bold">View
-                                Details
                                 <i class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45">
                                 </i>
                             </button>
                         </div>
                     </div>
-                    <div>
-                        <img src="assets/img5.png" alt="">
+
+                    <div class="px-5 my-5">
+                        <img class="w-full h-auto object-cover" src="assets/img2.png" alt="">
                     </div>
                 </div>
+                <div class="lg:grid grid-cols-4 gap-4">
+                    <div class="px-5 my-5">
+                        <img class="w-full h-auto object-cover" src="assets/img3.png" alt="">
+                    </div>
 
+                    <div class="col-span-2 lg:flex gap-4 px-5 my-5">
+                        <div>
+                            <img class="w-full h-auto object-cover" src="assets/img4.png" alt="">
+                        </div>
+                        <div class="lg:w-60 sm:w-52 space-y-5">
+                            <h3 class="text-xl font-bold">Commercial</h3>
+                            <p class="text-gray-500">The barn house captivates with
+                                its blend of rustic charm and
+                                modern. </p>
+                            <button class="text-black text-xl font-bold">View Details
+                                <i
+                                    class="bg-lime-300 rounded-full text-black p-1 fa-solid fa-arrow-right -rotate-45"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="lg:hidden px-5 my-5">
+                        <img class="w-full h-auto object-cover" src="assets/img3.png" alt="">
+                    </div>
+
+                    <div class="px-5 my-5">
+                        <img class="w-full h-auto object-cover" src="assets/img5.png" alt="">
+                    </div>
+                </div>
             </div>
+
+
         </section>
 
         <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center max-h-full">
