live sever visible  problem solved

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 
-<body class="">
+<body class="bg-white">
 
     <header class="lg:px-32 sm:px-5 my-5">
         <div class="navbar bg-base-100 ">
